--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -7,7 +7,7 @@
                     <a href="index-6.html" class="logo">
                         <img src="../../assets/frontent_files/img/logo.png" style="width: 200px;" alt="logo">
                     </a>
-                    <p>Creating a better future for human beings using human friendly trusted AI solutions.</p>
+                    <p>Transform Your Ideas into Digital Reality with Expert Web Development</p>
                     <ul class="social-link">
                         <li><a href="#" class="d-block" target="_blank"><i class='bx bxl-facebook'></i></a></li>
                         <li><a href="#" class="d-block" target="_blank"><i class='bx bxl-twitter'></i></a></li>
@@ -47,9 +47,9 @@
                 <div class="single-footer-widget">
                     <h3>Address</h3>
                     <ul class="footer-contact-info">
-                        <li><i class='bx bx-map'></i>Infinite Epochs Labs Pvt. Ltd <br> KeyOn Plus, Jubilee Hills, Hyderabad</li>
-                        <li><i class='bx bx-phone-call'></i><a href="tel:+919437641661">+91 943 764 1661</a></li>
-                        <li><i class='bx bx-envelope'></i><a href="mailto:info@infiniteepoch.com">info@ie-labs.com</a></li>
+                        <li><i class='bx bx-map'></i>Clumps Software, 4th floor, Vasista Bhavan, Opposite Lane DLF Gachibowli, Hyderabad, Telangana, 500032</li>
+                        <li><i class='bx bx-phone-call'></i><a href="tel:+919437641661">+91 9665891425</a></li>
+                        <li><i class='bx bx-envelope'></i><a href="mailto:info@infiniteepoch.com">info@clumpssoftware.com</a></li>
 
                     </ul>
                 </div>
