--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -45,14 +45,14 @@
         <div class="section-title">
             <span class="sub-title"><img src="../../assets/frontent_files/img/star-icon.png" alt="image"></span>
             <h2>We Provide End-To-End Development Solutions<span class="overlay"></span></h2>
-            <p>We provide Secure and Explainable AI solutions using the latest Tech Stacks and Algorithms, following the Industry Standard Compliances and Ethics.</p>
+            <p>We provide Secure and Explainable solutions using the latest Tech Stacks and Algorithms, following the Industry Standard Compliances and Ethics.</p>
         </div>
 
         <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="single-solutions-box wow fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
                     <div class="icon">
-                        <i class="flaticon-rocket"></i>
+                        <i class="flaticon-rocket" style="color:#25b1c4"></i>
                     </div>
                     <h3><a href="/services">Research & Development</a></h3>
                     <p>We are in the point of continuous research and development in the domain of AI, which includes innovative products, research papers and coming up with new ways of imparting knowledge.</p>
@@ -64,7 +64,7 @@
             <div class="col-lg-6 col-md-6 col-sm-6">
                 <div class="single-solutions-box wow fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
                     <div class="icon">
-                        <i class="flaticon-laptop"></i>
+                        <i class="flaticon-laptop" style="color:#25b1c4"></i>
                     </div>
                     <h3><a href="/services">Consulting Services</a></h3>
                     <p>We are into contemporary ways of providing multiple types of consulting services, that includes product consulting, man power consulting, cloud solutions etc., with AI and Agile oriented philosophy.</p>
@@ -101,18 +101,17 @@
                                     <img src="../../assets/frontent_files/img/icon1.png" alt="image">
                                 </div>
                                 <h3>Vision</h3>
-                                <p>Creating a better future for humans using friendly and trusted AI solutions</p>
+                                <p> Transforming Digital Experiences through Innovative Web Development</p>
                             </span></li>
 
-                            <li><span>
+                            <li><span class="hadj">
                                 <div class="icon">
                                     <img src="../../assets/frontent_files/img/icon1.png" alt="image">
                                 </div>
                                 <h3>Mission</h3>
-                                <p>Building human friendly AI solutions & enabling resources to be called "The Friends Of AI" </p>
+                                <p>Empowering Businesses with Powerful Web Solutions</p>
                             </span></li>
                         </ul>
-                       <!-- <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna.</p>-->
                         <a href="/about-us" class="default-btn"><i class="flaticon-right"></i>More About Us<span></span></a>
                     </div>
                 </div>
@@ -137,19 +136,19 @@
                     <div class="icon">
                         <img src="../../assets/frontent_files/img/services/icon6.png" alt="image">
                     </div>
-                    <h3><a href="/services">AI product Solutions</a></h3>
-                    <p>Do you have a problem statement! Not sure how to proceed?<br> well, we are there for you. We provide end-to-end AI Solutions right from data collection to model deployment. Our team of experienced researchers are there to guide you throughout the ML life cycle </p>
+                    <h3><a href="/services">Web Application Solutions</a></h3>
+                    <p>we believe in providing comprehensive support throughout the entire lifecycle of your web application. From initial planning and development to ongoing maintenance and updates, our dedicated team is committed to ensuring the seamless operation of your web application</p>
                     <a href="/services" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
                 </div>
             </div>
 
             <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="single-services-item-box wow fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                <div class="single-services-item-box wow fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
                     <div class="icon">
-                        <img src="../../assets/frontent_files/img/services/icon2.png" alt="image">
+                        <img src="../../assets/frontent_files/img/services/icon6.png" alt="image">
                     </div>
-                    <h3><a href="/services"> Recruitments & Staffing Solutions</a></h3>
-                    <p>Difficult to move your AI projects due to lack of resources! <br> We got you covered there. Our innovative staffing solutions will help you in all your custom needs</p>
+                    <h3><a href="/services">AI product Solutions</a></h3>
+                    <p>Do you have a problem statement! Not sure how to proceed?<br> well, we are there for you. We provide end-to-end AI Solutions right from data collection to model deployment. Our team of experienced researchers are there to guide you throughout the ML life cycle </p>
                     <a href="/services" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
                 </div>
             </div>
@@ -164,48 +163,10 @@
                     <a href="/services'" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
                 </div>
             </div>
-
-            <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="single-services-item-box wow fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
-                    <div class="icon">
-                        <img src="../../assets/frontent_files/img/services/icon4.png" alt="image">
-                    </div>
-                    <h3><a href="/services'">Data Collection & Data Engineering</a></h3>
-                    <p>The first step of building an ML Model us having data. We provide services that includes data collection using different research based methods, data processing and then feature engineering for your AI based model.</p>
-                    <a href="/services'" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
-                </div>
-            </div>
-
-            <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="single-services-item-box wow fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
-                    <div class="icon">
-                        <img src="../../assets/frontent_files/img/services/icon5.png" alt="image">
-                    </div>
-                    <h3><a href="/services">Upskilling & Reskilling </a></h3>
-                    <p>We provide AI and analytics enabled training services, which includes both the domains of upskilling & reskilling</p>
-                    <p style="margin-bottom: 30px">&nbsp;</p>
-                    <a href="/services" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
-                </div>
-            </div>
-
-            <!--<div class="col-lg-4 col-md-6 col-sm-6">
-
-
-            <div class="col-lg-4 col-md-6 col-sm-6">
-
-                <div class="single-services-item-box wow fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
-                    <div class="icon">
-                        <img src="../../assets/frontent_files/img/services/icon6.png" alt="image">
-                    </div>
-                    <h3><a href="/services">STAFFING SERVICES & Consulting</a></h3>
-                    <p> We are providing multiple types of consulting services that include product consulting , man power consulting , with an AI and Agile oriented philosophy. </p>
-                    <a href="/services" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
-                </div>
-            </div>-->
         </div>
     </div>
 </section>
-<section class="services-area pt-100 pb-70 bg-f1f8fb">
+<section class="services-area pt-100 pb-70">
     <div class="container">
         <div class="section-title">
             <h2>Our Products & Solutions<span class="overlay"></span></h2>
@@ -213,68 +174,66 @@
 
         <div class="row">
             <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="single-services-item-box wow fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                <div class="single-services-item-box wow fadeInUp bd" data-wow-delay="00ms" data-wow-duration="1500ms">
                     <div class="icon">
-                        <img src="../../assets/frontent_files/img/services/icon6.png" alt="image">
+                        <img src="../../assets/frontent_files/img/Production Management.jpg" alt="image">
                     </div>
-                    <h3><a href="/services">The Chat-Bot University</a></h3>
+                    <h3><a href="/services">Production Management</a></h3>
 
                     <a href="/services" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
                 </div>
             </div>
 
             <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="single-services-item-box wow fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                <div class="single-services-item-box bd wow fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
                     <div class="icon">
-                        <img src="../../assets/frontent_files/img/services/icon2.png" alt="image">
+                        <img src="../../assets/frontent_files/img/Ware House Management.png" alt="image" class="fxdHeight">
                     </div>
-                    <h3><a href="/services"> Personage.AI</a></h3>
+                    <h3><a href="/services">Ware House Management</a></h3>
 
                     <a href="/services" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
                 </div>
             </div>
 
             <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="single-services-item-box wow fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
+                <div class="single-services-item-box bd wow fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
                     <div class="icon">
-                        <img src="../../assets/frontent_files/img/services/icon3.png" alt="image">
+                        <img src="../../assets/frontent_files/img/HR management.jpg" alt="image" class="fxdHeight">
                     </div>
-                    <h3><a href="/services">Scrum Bor.AI</a></h3>
+                    <h3><a href="/services">HR Managament</a></h3>
 
                     <a href="/services" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
                 </div>
             </div>
 
             <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="single-services-item-box wow fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
+                <div class="single-services-item-box bd wow fadeInUp" data-wow-delay="200ms" data-wow-duration="1500ms">
                     <div class="icon">
-                        <img src="../../assets/frontent_files/img/services/icon4.png" alt="image">
+                        <img src="../../assets/frontent_files/img/Sales & Marketing Management.jpg" alt="image" class="fxdHeight">
                     </div>
-                    <h3><a href="/services">Research Papers and Patents</a></h3>
+                    <h3><a href="/services">Sales Management</a></h3>
 
                     <a href="/services" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
                 </div>
             </div>
 
             <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="single-services-item-box wow fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
+                <div class="single-services-item-box bd wow fadeInUp" data-wow-delay="100ms" data-wow-duration="1500ms">
                     <div class="icon">
-                        <img src="../../assets/frontent_files/img/services/icon5.png" alt="image">
+                        <img src="../../assets/frontent_files/img/Finance Management.jpg" alt="image" class="fxdHeight">
                     </div>
-                    <h3><a href="/services">AI Solution for physically Different Peoples</a></h3>
+                    <h3><a href="/services">Purchase Management</a></h3>
 
                     <a href="/services" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
                 </div>
             </div>
 
             <div class="col-lg-4 col-md-6 col-sm-6">
-                <div class="single-services-item-box wow fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
+                <div class="single-services-item-box bd wow fadeInUp" data-wow-delay="00ms" data-wow-duration="1500ms">
                     <div class="icon">
-                        <img src="../../assets/frontent_files/img/services/icon6.png" alt="image">
+                        <img src="../../assets/frontent_files/img/friendly-chatbot.jpg" alt="image" class="fxdHeight">
                     </div>
-                    <h3><a href="/services">Events</a></h3>
-                    <p style="margin-bottom: 3px">&nbsp;</p>
-
+                    <h3><a href="/services">The Chatbot AI</a></h3>
                     <a href="/services" class="read-more-btn">Read More <i class="flaticon-right"></i></a>
                 </div>
             </div>
