--- a/src/assets/frontent_files/css/responsive.css
+++ b/src/assets/frontent_files/css/responsive.css
@@ -671,7 +671,7 @@
     padding: 25px 20px;
   }
   .single-services-item-box .icon img {
-    width: 55px;
+    width: 50%;
   }
   .single-services-item-box h3 {
     font-size: 20px;
