added nwe pages

--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -48,8 +48,8 @@
                     <h3>Address</h3>
                     <ul class="footer-contact-info">
                         <li><i class='bx bx-map'></i>Clumps Software, 4th floor, Vasista Bhavan, Opposite Lane DLF Gachibowli, Hyderabad, Telangana, 500032</li>
-                        <li><i class='bx bx-phone-call'></i><a href="tel:+919437641661">+91 9665891425</a></li>
-                        <li><i class='bx bx-envelope'></i><a href="mailto:info@infiniteepoch.com">info@clumpssoftware.com</a></li>
+                        <li><i class='bx bx-phone-call'></i><a href="tel:+919665891425">+91 9665891425</a></li>
+                        <li><i class='bx bx-envelope'></i><a href="mailto:info@clumpssoftware.com">info@clumpssoftware.com</a></li>
 
                     </ul>
                 </div>
@@ -59,7 +59,7 @@
         <div class="footer-bottom-area">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-md-6">
-                    <!-- <p><i class='bx bx-copyright'></i>2020 <strong>Tracer</strong> is Proudly Powered by <a target="_blank" href="https://envytheme.com/">EnvyTheme</a></p> -->
+                    <p><i class='bx bx-copyright'></i>2023 <strong>Tracer</strong> is Proudly Powered by <a target="_blank" href="https://clumpssoftware.com/">clumpsSoftware</a></p>
                 </div>
 
                 <div class="col-lg-6 col-md-6">
