--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -4,7 +4,7 @@
         <div class="container">
             <div class="tracer-responsive-menu">
                 <div class="logo">
-                    <a href="index.html">
+                    <a href="/">
                         <img src="../../assets/frontent_files/img/logo.png" style="width: 100px;" alt="logo">
                     </a>
                 </div>
