--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -59,7 +59,7 @@
         <div class="footer-bottom-area">
             <div class="row align-items-center">
                 <div class="col-lg-6 col-md-6">
-                    <p><i class='bx bx-copyright'></i>2023 <strong>Tracer</strong> is Proudly Powered by <a target="_blank" href="https://clumpssoftware.com/">clumpsSoftware</a></p>
+                    <p><i class='bx bx-copyright'></i>2023 <a target="_blank" href="https://clumpssoftware.com/">clumpsSoftware</a></p>
                 </div>
 
                 <div class="col-lg-6 col-md-6">
