--- a/src/app/service/service.component.html
+++ b/src/app/service/service.component.html
@@ -126,7 +126,7 @@
                                     <i class='bx bx-user-pin'></i>
                                 </div>
                                 <span>Phone:</span>
-                                <a href="tel:+919437641661" target="_blank">+91-943 764 1661</a>
+                                <a href="tel:+919665891425" target="_blank">+91-9665891425</a>
                             </li>
                             <li>
                                 <div class="icon">
@@ -140,7 +140,7 @@
                                     <i class='bx bx-envelope'></i>
                                 </div>
                                 <span>Email:</span>
-                                <a href="mailto:info@infiniteepoch.com">info@infiniteepoch.com</a>
+                                <a href="mailto:info@clumpssoftware.com">info@clumpssoftware.com</a>
                             </li>
                         </ul>
                     </div>
