--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,11 +1,12 @@
+
 <!-- Start Navbar Area -->
-<div class="navbar-area navbar-style-two">
+<div class="navbar-area navbar-style-one">
     <div class="tracer-responsive-nav">
         <div class="container">
-            <div class="tracer-responsive-menu">
+            <div class="tracer-responsive-menu mean-container">
                 <div class="logo">
                     <a href="/">
-                        <img src="../../assets/frontent_files/img/logo.png" style="width: 100px;" alt="logo">
+                        <img src="../../assets/frontent_files/img/logo-white.png" style="width: fit-content;" alt="logo">
                     </a>
                 </div>
             </div>
@@ -16,7 +17,7 @@
         <div class="container">
             <nav class="navbar navbar-expand-md navbar-light">
                 <a class="navbar-brand" href="/">
-                    <img src="../../assets/frontent_files/img/logo.png" width="200pc" alt="logo">
+                    <img src="../../assets/frontent_files/img/logo-white.png" width="200pc" alt="logo">
                 </a>
 
                 <div class="collapse navbar-collapse mean-menu">
