--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -6,7 +6,7 @@
             <div class="tracer-responsive-menu mean-container">
                 <div class="logo">
                     <a href="/">
-                        <img src="../../assets/frontent_files/img/logo-white.png" style="width: fit-content;" alt="logo">
+                        <img src="../../assets/frontent_files/img/logo-white.png" style="width: 70%" alt="logo">
                     </a>
                 </div>
             </div>
