fix alignment issues

--- a/src/app/home-page/home-page.component.html
+++ b/src/app/home-page/home-page.component.html
@@ -1,6 +1,6 @@
 <app-navigation></app-navigation>
 <!-- Start Main Banner Area -->
-<div class="home-slides owl-carousel owl-theme">
+<!-- <div class="home-slides owl-carousel owl-theme">
     <div class="main-banner-item item-bg1">
         <div class="d-table">
             <div class="d-table-cell">
@@ -37,9 +37,43 @@
         </div>
         
     </div>
+</div> -->
+<!-- End Main Banner Area -->
+<!-- Start Main Banner Area -->
+<div class="banner-section">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-5 col-md-12">
+                <div class="banner-content">
+                    <h1 class="wow animate__animated animate__fadeInLeft" data-wow-delay="00ms" data-wow-duration="1000ms">Empowering Businesses with Innovative Solutions</h1>
+                    <p class="wow animate__animated animate__fadeInLeft" data-wow-delay="100ms" data-wow-duration="1000ms">Transforming Industries Through Technology</p>
+                    <div class="btn-box">
+                        <a href="/contact-us" class="default-btn wow animate__animated animate__fadeInRight" data-wow-delay="200ms" data-wow-duration="1000ms"><i class="flaticon-right"></i>About Us<span></span></a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-lg-7 col-md-12">
+                <div class="banner-animation-image">
+                    <img src="../../assets/frontent_files/img/main-banner/banner-two/img1.png" class="wow animate__animated animate__fadeInDown" data-wow-delay="500ms" data-wow-duration="1000ms" alt="image" data-speed="0.06" data-revert="true">
+                    <img src="../../assets/frontent_files/img/main-banner/banner-two/img2.png" class="wow animate__animated animate__fadeInUp" data-wow-delay="500ms" data-wow-duration="1000ms" alt="image" data-speed="0.06" data-revert="true">
+                    <img src="../../assets/frontent_files/img/main-banner/banner-two/img3.png" class="wow animate__animated animate__fadeInRight" data-wow-delay="500ms" data-wow-duration="1000ms" alt="image" data-speed="0.06" data-revert="true">
+                    <img src="../../assets/frontent_files/img/main-banner/banner-two/img4.png" class="wow animate__animated animate__fadeInUp" data-wow-delay="500ms" data-wow-duration="1000ms" alt="image" data-speed="0.06" data-revert="true">
+                    <img src="../../assets/frontent_files/img/main-banner/banner-two/img5.png" class="wow animate__animated animate__fadeInUp" data-wow-delay="500ms" data-wow-duration="1000ms" alt="image" data-speed="0.06" data-revert="true">
+                    <img src="../../assets/frontent_files/img/main-banner/banner-two/img6.png" class="wow animate__animated animate__fadeInLeft" data-wow-delay="500ms" data-wow-duration="1000ms" alt="image" data-speed="0.06" data-revert="true">
+                    <img src="../../assets/frontent_files/img/main-banner/banner-two/img7.png" class="wow animate__animated animate__fadeInLeft" data-wow-delay="500ms" data-wow-duration="1000ms" alt="image" data-speed="0.06" data-revert="true">
+                    <img src="../../assets/frontent_files/img/main-banner/banner-two/img8.png" class="wow animate__animated animate__fadeInDown" data-wow-delay="500ms" data-wow-duration="1000ms" alt="image" data-speed="0.06" data-revert="true">
+                    <img src="../../assets/frontent_files/img/main-banner/banner-two/img9.png" class="wow animate__animated animate__fadeInDown" data-wow-delay="500ms" data-wow-duration="1000ms" alt="image" data-speed="0.06" data-revert="true">
+                    <img src="../../assets/frontent_files/img/main-banner/banner-two/img10.png" class="wow animate__animated animate__fadeInRight" data-wow-delay="500ms" data-wow-duration="1000ms" alt="image" data-speed="0.06" data-revert="true">
+                    <img src="../../assets/frontent_files/img/main-banner/banner-two/img11.png" class="wow animate__animated animate__fadeInLeft" data-wow-delay="500ms" data-wow-duration="1000ms" alt="image" data-speed="0.06" data-revert="true">
+                    <img src="../../assets/frontent_files/img/main-banner/banner-two/img12.png" class="wow animate__animated animate__fadeInUp" data-wow-delay="00ms" data-wow-duration="1000ms" alt="image" data-speed="0.06" data-revert="true">
+                    <img src="../../assets/frontent_files/img/main-banner/banner-two/main-pic.png" alt="image">
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 <!-- End Main Banner Area -->
-
 <!-- Start Solutions Area -->
 <section class="solutions-area pt-100 pb-70">
     <div class="container">
