--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -14,22 +14,38 @@
                     <div class="content">
                         <span class="sub-title"><img src="../../assets/frontent_files/img/star-icon.png" alt="image"> About Us</span>
                         <h2>END TO END DEVELOPMENT</h2>
-                        <p>We provide AI solutions services for different companies doing the latest tech stacks in the industry keeping in mind security compliance and ethics perspective.</p>
+                        <p>We are a leading software development company, dedicated to providing top-notch solutions that empower businesses to thrive in the digital era. With our team of highly skilled developers, architects, and engineers, we deliver innovative software products and services tailored to meet your specific needs. Whether you require a custom software solution, enterprise application development, software consulting services or digital marketing we have the expertise and experience to deliver outstanding results.</p>
                         <ul class="features-list">
-                            <li><span style="padding-bottom: 51px;">
+                            <li><span>
                                 <div class="icon">
                                     <img src="../../assets/frontent_files/img/icon1.png" alt="image">
                                 </div>
-                                <h3>Vision</h3>
-                                <p>Creating a better future for human's using human friendly AI Solutions</p>
+                                <h3>5+ Years</h3>
+                                <p>On the market</p>
                             </span></li>
 
                             <li><span>
                                 <div class="icon">
                                     <img src="../../assets/frontent_files/img/icon1.png" alt="image">
                                 </div>
-                                <h3>Mission</h3>
-                                <p>Building human friendly AI Solutions & enabling resources to be called "Friends Of AI" </p>
+                                <h3>45+</h3>
+                                <p>Team members</p>
+                            </span></li>
+
+                            <li><span>
+                                <div class="icon">
+                                    <img src="../../assets/frontent_files/img/icon1.png" alt="image">
+                                </div>
+                                <h3>100%</h3>
+                                <p>Satisfaction rate</p>
+                            </span></li>
+
+                            <li><span>
+                                <div class="icon">
+                                    <img src="../../assets/frontent_files/img/icon1.png" alt="image">
+                                </div>
+                                <h3>100%</h3>
+                                <p>On Time Delivery</p>
                             </span></li>
                         </ul>
 
@@ -38,6 +54,53 @@
             </div>
         </div>
     </div>
+    <div class="container">
+    <div class="about-inner-area">
+        <div class="row">
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="about-text">
+                    <h3>Our History</h3>
+                    <p>Real innovations and a positive customer experience are the heart of successful communication.</p>
+                    
+                    <ul class="features-list">
+                        <li><i class="flaticon-tick"></i> Activate Listening</li>
+                        <li><i class="flaticon-tick"></i> Brilliant minds</li>
+                        <li><i class="flaticon-tick"></i> Better. Best. Wow!</li>
+                        <li><i class="flaticon-tick"></i> Branding it better!</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="about-text">
+                    <h3>Our Mission</h3>
+                    <p>Empowering Businesses with Powerful Web Solutions</p>
+                    
+                    <ul class="features-list">
+                        <li><i class="flaticon-tick"></i> Creating. Results.</li>
+                        <li><i class="flaticon-tick"></i> Expect more</li>
+                        <li><i class="flaticon-tick"></i> Good thinking</li>
+                        <li><i class="flaticon-tick"></i> In real we trust</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="col-lg-4 col-md-6 col-sm-6 offset-lg-0 offset-md-3 offset-sm-3">
+                <div class="about-text">
+                    <h3>Who we are</h3>
+                    <p>Real innovations and a positive customer experience are the heart of successful communication.</p>
+                    
+                    <ul class="features-list">
+                        <li><i class="flaticon-tick"></i> Stay real. Always.</li>
+                        <li><i class="flaticon-tick"></i> We have you covered</li>
+                        <li><i class="flaticon-tick"></i> We turn heads</li>
+                        <li><i class="flaticon-tick"></i> Your brand, promoted</li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
     <div class="circle-shape1"><img src="../../assets/frontent_files/img/shape/circle-shape1.png" alt="image"></div>
 </section>
@@ -59,22 +122,29 @@
                             <div class="count-box">
                                 1
                             </div>
-                            <h3>RECRUITMENT AND STAFFING</h3>
-                            <p>we help resources getting upskilled in the domain of AI and make them master's in it, through international certificates, hackathon & research paper etc. and help them in getting the right and deserving opportunities. </p>
+                            <h3>Expertise and Experience</h3>
+                            <p>Our team comprises highly skilled professionals with years of experience in web and mobile application development. We stay up-to-date with the latest trends and technologies to deliver cutting-edge solutions.</p>
                         </div>
                         <div class="single-item">
                             <div class="count-box">
                                 2
                             </div>
-                            <h3>UP-SKILLING AND RESKILLING</h3>
-                            <p>We provide institutional training and corporate training for upskilling and reskilling resources.</p>
+                            <h3>Customization and Flexibility</h3>
+                            <p>We understand that each business is unique, and we tailor our services to fit your specific needs. We provide scalable and customizable solutions that can grow with your business.</p>
                         </div>
                         <div class="single-item">
                             <div class="count-box">
                                 3
                             </div>
-                            <h3>STAFFING SERVICES</h3>
-                            <p>We help students upskills themselves with the latest trend in the industry and then create the portfolio in the IE playground, come check our resources and explore the IE playground.</p>
+                            <h3>Timely Delivery</h3>
+                            <p>We value your time and ensure timely delivery of projects without compromising on quality. Our streamlined development process allows us to meet deadlines and milestones effectively.</p>
+                        </div>
+                        <div class="single-item">
+                            <div class="count-box">
+                                4
+                            </div>
+                            <h3>Competitive Pricing</h3>
+                            <p>We offer competitive pricing models that provide value for your investment. Our transparent pricing ensures that you receive a high-quality product at a reasonable cost.</p>
                         </div>
                     </div>
                 </div>
@@ -94,9 +164,9 @@
 <section class="process-area pb-70">
     <div class="container">
         <div class="section-title">
-            <span class="sub-title"><img src="../../assets/frontent_files/img/star-icon.png" alt="image"> How It's Work</span>
-            <h2>The Data Science Process<span class="overlay"></span></h2>
-            <p>We follow 100% agile methodology approach with regular feature resources and adhering to timeline strictly.</p>
+            <span class="sub-title"><img src="../../assets/frontent_files/img/star-icon.png" alt="image">Our Work Process</span>
+            <h2>Delivering Excellence Every Step of the Way<span class="overlay"></span></h2>
+            <p>At Clumps Software, we are passionate about empowering businesses with cutting-edge software solutions. Our work process is designed to ensure that we deliver excellence at every step, from initial consultation to final deployment.</p>
         </div>
 
         <div class="row">
@@ -106,8 +176,8 @@
                     <div class="image">
                         <img src="../../assets/frontent_files/img/process/img1.png" alt="image">
                     </div>
-                    <h3>Frame the Problem</h3>
-                    <p>Understanding problem statements, which design thinking philosophy.</p>
+                    <h3>Discovery</h3>
+                    <p>We begin by understanding your business goals, requirements, and challenges. Our team conducts in-depth research and analysis to identify the most effective solutions for your specific needs.</p>
                 </div>
             </div>
 
@@ -117,8 +187,8 @@
                     <div class="image">
                         <img src="../../assets/frontent_files/img/process/img2.png" alt="image">
                     </div>
-                    <h3>Collect the Raw Data</h3>
-                    <p>Data Collection and Engineering</p>
+                    <h3>Planning</h3>
+                    <p>Based on our findings, we develop a comprehensive project plan that outlines the scope, timelines, and milestones. We collaborate closely with you to align our strategy with your vision</p>
                 </div>
             </div>
 
@@ -128,8 +198,8 @@
                     <div class="image">
                         <img src="../../assets/frontent_files/img/process/img3.png" alt="image">
                     </div>
-                    <h3>Process the Data</h3>
-                    <p>Data pre-processing and creation of Data pipeline</p>
+                    <h3>Design & Development</h3>
+                    <p>Our talented designers and developers work hand-in- hand to create visually appealing interfaces and robust software solutions. We employ industry best practices and cutting-edge technologies to bring your ideas to life.</p>
                 </div>
             </div>
 
@@ -139,8 +209,8 @@
                     <div class="image">
                         <img src="../../assets/frontent_files/img/process/img4.png" alt="image">
                     </div>
-                    <h3>Explore the Data</h3>
-                    <p>Deciding ML models and creation of ML Pipeline.</p>
+                    <h3>Testing & Quality Assurance</h3>
+                    <p>We rigorously test the software to ensure its functionality, security, and usability. Our quality assurance team conducts thorough testing, identifying and resolving any issues before deployment.</p>
                 </div>
             </div>
 
@@ -150,8 +220,8 @@
                     <div class="image">
                         <img src="../../assets/frontent_files/img/process/img5.png" alt="image">
                     </div>
-                    <h3>Development of ML models.</h3>
-                    <p style="margin-bottom: 30px">&nbsp;</p>
+                    <h3>Deployment & Training</h3>
+                    <p style="margin-bottom: 30px">Once the software is ready, we deploy it to your infrastructure or the cloud, ensuring a smooth transition. We also provide comprehensive training to your team, enabling them to make the most of the solution.</p>
 
                 </div>
             </div>
@@ -162,8 +232,8 @@
                     <div class="image">
                         <img src="../../assets/frontent_files/img/process/img6.png" alt="image">
                     </div>
-                    <h3>MlOps</h3>
-                    <p>Designing of CI/CD pipeline and integrating ML and Data pipelines.</p>
+                    <h3>Support & Maintenance</h3>
+                    <p>Our commitment doesn't end with deployment. We offer ongoing support and maintenance services to ensure your software continues to perform optimally. Our team is always ready to assist you whenever you need it.</p>
                 </div>
             </div>
         </div>
@@ -172,72 +242,4 @@
     <div class="circle-shape1"><img src="../../assets/frontent_files/img/shape/circle-shape1.png" alt="image"></div>
 </section>
 <!-- End How It's Work Area -->
-<!-- Start How It's Work Area -->
-<section class="process-area pb-70">
-<div class="container">
-<div class="section-title">
-    <span class="sub-title"><img src="../../assets/frontent_files/img/star-icon.png" alt="image"> How It's Work</span>
-    <h2>The Consulting Process<span class="overlay"></span></h2>
-    <p></p>
-</div>
-
-<div class="row">
-    <div class="col-lg-4 col-md-6">
-        <div class="single-process-box wow fadeInUp" data-tilt data-wow-delay="00ms" data-wow-duration="1500ms">
-            <div class="number">1</div>
-            <div class="image">
-                <img src="../../assets/frontent_files/img/process/img1.png" alt="image">
-            </div>
-            <h3>End-to-End  AI product development and Consulting.</h3>
-
-        </div>
-    </div>
-
-    <div class="col-lg-4 col-md-6">
-        <div class="single-process-box wow fadeInUp" data-tilt data-wow-delay="100ms" data-wow-duration="1500ms">
-            <div class="number">2</div>
-            <div class="image">
-                <img src="../../assets/frontent_files/img/process/img2.png" alt="image">
-            </div>
-            <h3>Recruitments and Staffing solutions.</h3>
-
-        </div>
-    </div>
-
-    <div class="col-lg-4 col-md-6">
-        <div class="single-process-box wow fadeInUp" data-tilt data-wow-delay="200ms" data-wow-duration="1500ms">
-            <div class="number">3</div>
-            <div class="image">
-                <img src="../../assets/frontent_files/img/process/img3.png" alt="image">
-            </div>
-            <h3>Cloud and Development solutions.</h3>
-
-        </div>
-    </div>
-
-    <div class="col-lg-4 col-md-6">
-        <div class="single-process-box wow fadeInUp" data-tilt data-wow-delay="200ms" data-wow-duration="1500ms">
-            <div class="number">4</div>
-            <div class="image">
-                <img src="../../assets/frontent_files/img/process/img4.png" alt="image">
-            </div>
-            <h3>Ideation and Data Collection solutions.</h3>
-
-        </div>
-    </div>
-
-    <div class="col-lg-4 col-md-6">
-        <div class="single-process-box wow fadeInUp" data-tilt data-wow-delay="100ms" data-wow-duration="1500ms">
-            <div class="number">5</div>
-            <div class="image">
-                <img src="../../assets/frontent_files/img/process/img5.png" alt="image">
-            </div>
-            <h3>Up-Skilling and Re-skilling solutions.</h3>
-        </div>
-    </div>
-</div>
-</div>
-
-<div class="circle-shape1"><img src="../../assets/frontent_files/img/shape/circle-shape1.png" alt="image"></div>
-</section>
 <app-footer></app-footer>
