--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,4 +1,32 @@
- <!-- Start Footer Area -->
+
+<!-- Start Subscribe Area -->
+<section class="project-start-area bg-color ptb-100">
+    <div class="container">
+        <div class="row align-items-center">
+            <div class="col-lg-6 col-md-12">
+                <div class="subscribe-image">
+                    <img src="../../assets/frontent_files/img/subscribe-img1.png" data-speed="0.06" data-revert="true" alt="Blog Image">
+                </div>
+            </div>
+
+            <div class="col-lg-6 col-md-12">
+                <div class="subscribe-content">
+                    <h2 class="wow animate__animated animate__fadeInUp" style="color: white;" data-wow-delay="00ms" data-wow-duration="1500ms">We Like to Start Your Project With Us</h2>
+                    <p class="wow animate__animated animate__fadeInUp" style="color: white;" data-wow-delay="100ms" data-wow-duration="1500ms">If you like to start your ideas to be real please enter your email bellow and seat relax</p>
+                    <form class="newsletter-form wow fadeInUp" data-toggle="validator" data-wow-delay="200ms" data-wow-duration="1500ms">
+                        <input type="text" class="input-newsletter" placeholder="Enter your email address" name="EMAIL" required autocomplete="off">
+                        <button type="submit" class="default-btn"><i class="flaticon-tick"></i>Contact Us Now<span></span></button>
+                        <div id="validator-newsletter" class="form-result"></div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="vector-shape9"><img src="../../assets/frontent_files/img/shape/vector-shape9.png" alt="image"></div>
+    <div class="vector-shape10"><img src="../../assets/frontent_files/img/shape/vector-shape10.png" alt="image"></div>
+</section>
+<!-- End Subscribe Area -->
+<!-- Start Footer Area -->
  <footer class="footer-area bg-color">
     <div class="container">
         <div class="row">
