--- a/src/app/blogs/blogs.component.html
+++ b/src/app/blogs/blogs.component.html
@@ -1,3 +1,32 @@
 <app-navigation></app-navigation>
-<p>blogs works!</p>
+ <!-- Start Coming Soon Area -->
+ <div class="coming-soon-area">
+    <div class="d-table">
+        <div class="d-table-cell">
+            <div class="coming-soon-content">
+                <a href="/" class="logo black-logo">
+                    <img src="../../assets/frontent_files/img/logo.png" alt="image" width="50%">
+                </a>
+                
+                <h2>We Are Launching Soon</h2>
+                <div id="timer" class="flex-wrap d-flex justify-content-center">
+                    <div id="days" class="align-items-center flex-column d-flex justify-content-center"></div>
+                    <div id="hours" class="align-items-center flex-column d-flex justify-content-center"></div>
+                    <div id="minutes" class="align-items-center flex-column d-flex justify-content-center"></div>
+                    <div id="seconds" class="align-items-center flex-column d-flex justify-content-center"></div>
+                </div>
+                <form class="newsletter-form" data-bs-toggle="validator">
+                    <div class="form-group">
+                        <input type="email" class="input-newsletter" placeholder="Enter your email" name="EMAIL" required autocomplete="off">
+                        <span class="label-title"><i class='bx bx-envelope'></i></span>
+                    </div>
+                    <button type="submit" class="default-btn"><i class="flaticon-user"></i>Subscribe<span></span></button>
+                    <div id="validator-newsletter" class="form-result"></div>
+                    <p>If you would like to be notified when your app is live, Please subscribe to our mailing list.</p>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
+<!-- End Coming Soon Area -->
 <app-footer></app-footer>
