--- a/src/app/contactus/contactus.component.html
+++ b/src/app/contactus/contactus.component.html
@@ -52,32 +52,32 @@
 
             <div class="col-lg-6 col-md-12">
                 <div class="contact-form">
-                    <form id="contactForm">
+                    <form id="contactForm" (ngSubmit)="handleSubmit()">
                         <div class="row">
                             <div class="col-lg-12 col-md-6">
                                 <div class="form-group">
-                                    <input type="text" name="name" class="form-control" id="name" required data-error="Please enter your name" placeholder="Your name">
+                                    <input type="text" name="name" [(ngModel)]="formState.name" class="form-control" id="name" required data-error="Please enter your name" placeholder="Your name">
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
 
                             <div class="col-lg-12 col-md-6">
                                 <div class="form-group">
-                                    <input type="email" name="email" class="form-control" id="email" required data-error="Please enter your email" placeholder="Your email address">
+                                    <input type="email" name="email" [(ngModel)]="formState.email" class="form-control" id="email" required data-error="Please enter your email" placeholder="Your email address">
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
 
                             <div class="col-lg-12 col-md-12">
                                 <div class="form-group">
-                                    <input type="text" name="phone_number" class="form-control" id="phone_number" required data-error="Please enter your phone number" placeholder="Your phone number">
+                                    <input type="text" name="phone_number" [(ngModel)]="formState.phone" class="form-control" id="phone_number" required data-error="Please enter your phone number" placeholder="Your phone number">
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
 
                             <div class="col-lg-12 col-md-12">
                                 <div class="form-group">
-                                    <textarea name="message" id="message" class="form-control" cols="30" rows="6" required data-error="Please enter your message" placeholder="Write your message..."></textarea>
+                                    <textarea name="message" id="message" [(ngModel)]="formState.message" class="form-control" cols="30" rows="6" required data-error="Please enter your message" placeholder="Write your message..."></textarea>
                                     <div class="help-block with-errors"></div>
                                 </div>
                             </div>
