--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -139,5 +139,8 @@
                 Step-by-Step Guide to <br/> Achieving Your Business Goals
             </span>
         </div>
+        <div class="w-full">
+            <app-accodian></app-accodian>
+        </div>
     </div>
 </section>
